--- a/resilent_alert/pubspec.yaml
+++ b/resilent_alert/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^0.13.3
   firebase_auth: ^3.3.0
   math_expressions: ^2.0.0
+  uuid: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
